# yubimgr

./: .clang-format  .gitignore  .syntastic_c_config  LICENSE.txt  Makefile.am  README.md  autogen.sh  configure.ac  version_abi.sh  version_api.sh
yubimgr-bin/: Makefile.am
yubimgr-bin/src/: yubimgr-bin.c
yubimgr-lib/: Makefile.am
yubimgr-lib/include/yubimgr/: logging.h  yubimgr.h
yubimgr-lib/src/: bootstrap.c  logging.c  reset.c  status.c  yubimgr.c
yubimgr-tests/: Makefile.am  test_dummy.c
